Closed Bug 1262363 Opened 8 years ago Closed 8 years ago

[ATOK for Mac: Japanese Input Method] Send mouse events to Input Method to allow they can use it for UI state control (c.f. close automatic suggestion window by clicking another place).

Categories

(Core :: Widget: Cocoa, defect)

48 Branch
x86_64
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: kenji.irie, Assigned: m_kato)

References

Details

(Keywords: inputmethod)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:48.0) Gecko/20100101 Firefox/48.0
Build ID: 20160405030214

Steps to reproduce:

I've confirmed the concrete problem only with ATOK for Mac (a commercial IM in Japan) and Firefox combination.

Configure ATOK for Mac as following:
0. Install ATOK 2015 for Mac.
1. Open "ATOK 環境設定" from "環境設定" input menu item.
2. Select "推測変換" item in "設定項目" configuration tree.
3. Turn the "確定直後に推測候補の自動表示を行う" setting ON.
4. Press "OK" to close configuration dialog.

With this configuration, after you commited a word with ATOK, automatically opened continueing word suggestion window.

Clicking browser window should close the suggestion window.




Actual results:

With Firefox, it (the window) leaves.


Expected results:

Like other browsers than Firefox, clicking browser window should close the suggestion window.
OS: Unspecified → Mac OS X
Hardware: Unspecified → x86_64
Component: Untriaged → DOM: Events
Product: Firefox → Core
Hmm, I don't have ATOK 2015 for Mac. Makoto-san, do you?

# If not, I'll get it.
Component: DOM: Events → Untriaged
Keywords: inputmethod
Component: Untriaged → Widget: Cocoa
Older version of ATOK for Mac should reproduce this.
Oh, okay, thanks. I'll try to test it when I have much time.
I have ATOK subscription.  I test this this week.
Sorry, You need ATOK 2012 for Mac or later versions to reproduce this.
Tested on 10.10 with ATOK 2015.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Although I doesn't create patch yet, we should call [NSTextInputContext deactive] when blur?
(In reply to Makoto Kato [:m_kato] from comment #7)
> Although I doesn't create patch yet, we should call [NSTextInputContext
> deactive] when blur?

Basically, I hope that it's not so because the document said "You should not call this method directly; it is invoked by the system. It is provided as an override point for subclasses". So, I'm afraid to call it by ourselves...
I expect Gecko send (probably all) mouse events to [NSTextInputContext handleEvent:] before/after Gecko handles it.
Then ATOK can dismiss automatic suggestion window by handling it.

https://developer.apple.com/library/mac/documentation/Cocoa/Reference/NSTextInputContext_Class/#//apple_ref/occ/instm/NSTextInputContext/handleEvent:
Blocks: 158856
Webkit2 handles same method for mouse.  Thanks, Irie-san.
Assignee: nobody → m_kato
Some IME handles mouse event by handleEvent method of NSTextInputcontext.  So we should call it on mouse event for IME

Review commit: https://reviewboard.mozilla.org/r/49357/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/49357/
Attachment #8746307 - Flags: review?(masayuki)
Comment on attachment 8746307 [details]
MozReview Request: Bug 1262363 - Call [NSTextInputContext handleEvent] for mouse support on IME. r?masayuki

https://reviewboard.mozilla.org/r/49357/#review46245

Thank you very much!
Attachment #8746307 - Flags: review?(masayuki) → review+
https://hg.mozilla.org/mozilla-central/rev/bfd20783b793
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
I've verified the problem is fixed with Nightly (49.0a1 (2016-05-08)).
Thank you very much!
No longer blocks: 158856
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: