Bug 1262363 - Call [NSTextInputContext handleEvent] for mouse support on IME. r=masayuki

Some IME handles mouse event by handleEvent method of NSTextInputcontext.  So we should call it on mouse event for IME

MozReview-Commit-ID: 6lyXCpOJ3yr